# oxify

./: .gitignore  Cargo.toml  README.md  auth_response.html  ç
.github/workflows/: rust.yml
data/: Cargo.toml
data/src/: config.rs  environment.rs  font.rs  lib.rs  log.rs  messages.rs  types.rs
data/src/spotify/: setup.rs
include/: auth_response.html
oxify_derive/: Cargo.toml
oxify_derive/src/: lib.rs
spotify/: Cargo.toml
spotify/src/: auth.rs  lib.rs  service.rs
src/: app.rs  auth.rs  config.rs  data.rs  font.rs  lib.rs  logger.rs  main.rs  oxify.rs  screen.rs  spotify.rs
src/appaerance/: text.rs
src/auth/: api.rs  client.rs  config.rs  http.rs  mod.rs  server.rs
src/context/: config.rs  environment.rs
src/data/: messages.rs
src/model/: mod.rs  track_data.rs  user_profile.rs
src/screen/: player.rs  welcome.rs
src/spotify/: api.rs  backend.rs  service.rs  setup.rs
src/ui/: button.rs  text.rs
src/widgets/: app.rs  await_login.rs  content.rs  landing.rs  library.rs  login.rs  main_window.rs  mod.rs  player.rs  popup.rs  search.rs  tables.rs  tabs.rs
