[package]
name = "oxify"
version = "0.0.1-dev"
edition = "2021"
authors = ["Carlos Tocino <carlostocinocubelo@gmail.com>"]
description = "Lightweight, customizable Spotify client"
rust-version = "1.84.1"
readme = "README.md"
homepage = "https://oxify.rs"
license = "MIT"
repository = "https://github.com/sharlibeicon/oxify"

[[bin]]
name = "oxify"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dirs = "6.0.0"
iced = {version="0.13.1", features = ["tokio"]}
librespot = { git="https://github.com/librespot-org/librespot.git", branch="dev" }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["rt"] }
toml = "0.8.19"

[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3
lto = true
strip = true
