[package]
name = "oxify"
version = "0.0.1-dev"
edition = "2021"
authors = ["Carlos Tocino <carlostocinocubelo@gmail.com>"]
description = "Lightweight, customizable Spotify client"
rust-version = "1.86.0"
readme = "README.md"
homepage = "https://oxify.rs"
license = "MIT"
repository = "https://github.com/sharlibeicon/oxify"

[[bin]]
name = "oxify"

[dependencies]
librespot = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
anyhow = "1.0.98"
iced = { version = "0.13.1", features = ["image"] }
tokio = { version = "1.45.0", features = ["fs"] }
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
log = "0.4.27"
fern = "0.7.1"
tokio-stream = "0.1.17"
dirs-next = "2.0.0"
xdg = "3.0.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
open = "5.3.2"

[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3
lto = true
strip = true
